turn some URL footnotes into bibtex refs

--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -38,8 +38,10 @@
 	arxiv = {1401.5921}}
   
 @Misc{azure,
-	Howpublished = {\url{https://azure.microsoft.com/en-us/}},
-	Title = {{Microsoft Azure}}}
+	howpublished = {\url{https://azure.microsoft.com/en-us/}},
+	Title = {{Microsoft Azure}},
+    note = {Accessed 31 August 2014},
+}
 
 @inproceedings{chord,
 author = {Stoica, Ion and Morris, Robert and Karger, David and Kaashoek, M. Frans and Balakrishnan, Hari},
@@ -356,7 +358,7 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
 @Misc{github:citable,
     author = {GitHub},
     title = {Making Your Code Citable},
-    url = {https://guides.github.com/activities/citable-code/},
+    howpublished = {\url{https://guides.github.com/activities/citable-code/}},
     year = 2014,
     month = may,
     note = {Accessed 28 August 2014},
@@ -365,8 +367,7 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
 @Misc{figshare:citable,
     author = {FigShare},
     title = {All research outputs should be citable},
-    url =
-    {http://figshare.com/blog/All%20research%20outputs%20should%20be%20citable/32},
+    howpublished = {\url{http://figshare.com/blog/All%20research%20outputs%20should%20be%20citable/32}},
     year = 2012,
     month = jun,
     day = 12,
@@ -722,4 +723,26 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
     address = {Los Alamitos, CA, USA},
 }
 
+@Misc{mozillasciencelabs,
+    title = {{Mozilla Science Labs}},
+    howpublished = {\url{http://mozillascience.org/}},
+    note = {Accessed 31 August 2014},
+}
 
+@Misc{openscienceframework,
+    title = {{Open Science Framework}},
+    howpublished = {\url{https://osf.io/}},
+    note = {Accessed 31 August 2014},
+}
+
+@Misc{runmycode,
+    title = {{RunMyCode}},
+    howpublished = {\url{http://www.runmycode.org/}},
+    note = {Accessed 31 August 2014},
+}
+
+@Misc{softwarecarpentry,
+    title = {{Software Carpentry}},
+    howpublished = {\url{http://software-carpentry.org/}},
+    note = {Accessed 31 August 2014},
+}
