move more URLs to bibtex

--- a/SummerSchoolPaper/group3.tex
+++ b/SummerSchoolPaper/group3.tex
@@ -44,7 +44,7 @@ Framework programme. In the General Conditions part of the project's grant
 agreement, it is stated that the IP rights are awarded to the beneficiary, which
 in this case is the University of Edinburgh. In turn, the University of
 Edinburgh has issued a position statement on intellectual property
-rights\footnote{\url{http://tinyurl.com/kh8quod}}
+rights~\cite{edinburgh:ipr}
 in which it stated that it ``\emph{is the policy of the University of Edinburgh to develop University research capabilities and to assess, develop and promote the transfer of Edinburgh's technology and ideas for society's use and benefit.}'' Still, publication of the code would need to be checked with a supervisor.
 \item Data-related: the code uses a dataset based on bus location measurements provided to us by Lothian Buses. We would need their permission to put this dataset in the public domain.
 \end{itemize}
@@ -79,7 +79,7 @@ When this process is repeated many times, the results can be expressed as energy
 The TRoLE code was written when the first author of~\cite{bareford2010nanoflare}
 was a postgraduate at the University of Manchester. It was necessary therefore
 to check the IP policy for this
-institution.\footnote{\url{http://documents.manchester.ac.uk/DocuInfo.aspx?DocID=487}}
+institution~\cite{manchester:ipr}.
 Section~3.2 of this policy states that the ``\emph{...ownership of IP created by
 a Student, who is not an employee of the University, is with the Student.}'',
 which we took to mean that the first author was free to place the code in a
