--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -31,7 +31,7 @@
   year	      =	{2013}
 }
 
-@article{ciaran,
+@Misc{ciaran,
   Author = {McCreesh, Ciaran and Prosser, Patrick},
 	Title = {The Shape of the Search Tree for the Maximum Clique Problem, and the Implications for Parallel Branch and Bound},
   Year = {2014},
@@ -745,4 +745,23 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
     title = {{Software Carpentry}},
     howpublished = {\url{http://software-carpentry.org/}},
     note = {Accessed 31 August 2014},
+}
+
+@Misc{edinburgh:ipr,
+    author = {{The University of Edinburgh}},
+    key = {Edinburgh},
+    title = {Position Statement on Commercialising University Intellectual Property},
+    month = dec,
+    year = 2011,
+    url =
+    {http://www.research-innovation.ed.ac.uk/Portals/0/Documents/University-of-Edinburgh-Position-Statement-on-Intellectual-Property_December2011.pdf}
+}
+
+@Misc{manchester:ipr,
+    author = {{The University of Manchester}},
+    key = {Manchester},
+    title = {Intellectual Property Policy},
+    month = jan,
+    year = 2013,
+    url = {http://documents.manchester.ac.uk/display.aspx?DocID=487}
 }
