lots of tiny tweaks

--- a/SummerSchoolPaper/group3.tex
+++ b/SummerSchoolPaper/group3.tex
@@ -63,7 +63,7 @@ The output of the Java code is displayed in Table~\ref{tab: z bootstrapped cis}.
 \subsubsection*{Experiment 2: Solar Physics}
 
 %At the start of the recomputation exercise it was judged that the results
-%presented in \cite{bareford2010nanoflare} would be the easiest (of the three
+%presented in~\cite{bareford2010nanoflare} would be the easiest (of the three
 %publications outside of computer science) to reproduce. The underlying code is
 %serial in nature and not tied to specific hardware or operating system platform. 
 
@@ -115,7 +115,7 @@ the GNU Scientific Library
 %Once these function calls were corrected, the recomputation was successful. 
 
 Figure \ref{fig_recomp_grp3_exp2} shows two of the recomputed plots, the published energy distributions 
-  \cite{bareford2010nanoflare} are given in blue.
+ ~\cite{bareford2010nanoflare} are given in blue.
 \begin{figure}
 \begin{minipage}{\linewidth} 
   %\vspace{-10pt}
@@ -127,7 +127,7 @@ Figure \ref{fig_recomp_grp3_exp2} shows two of the recomputed plots, the publish
   %\includegraphics{../Group_3/wrpf_rx10e5_lle1}
   %\vspace{5pt}
   \includegraphics[scale=0.001]{../Group_3/wrpf_rx10e5_lle0}
-  \caption{\small{Flare energy distributions over 10$^5$ relaxation events for two different loop lifetimes, 100 (top) and 1 (bottom) relaxation event(s). The red plots are the recomputed results and the blue are the results from the original paper \cite{bareford2010nanoflare}.}}
+  \caption{\small{Flare energy distributions over 10$^5$ relaxation events for two different loop lifetimes, 100 (top) and 1 (bottom) relaxation event(s). The red plots are the recomputed results and the blue are the results from the original paper~\cite{bareford2010nanoflare}.}}
   \label{fig_recomp_grp3_exp2}
   %\vspace{-10pt}
 \end{minipage} 
@@ -137,7 +137,7 @@ The differences between the two sets of results are negligible and entirely cons
 \subsubsection*{Experiment 3: Atmospheric Physics}
 
 For the third paper, we prepared pre-built software for reproducing 
-  simulations of idealised atmospheric clouds presented in \cite{arabas2013libcloud}.
+  simulations of idealised atmospheric clouds presented in~\cite{arabas2013libcloud}.
 The paper covers description of an open-source C++ library named libcloudph++. 
 The library is intended for representing microphysics of clouds and precipitation
   in numerical models -- coupling libcloudph++ with a fluid-dynamics solver 
@@ -174,7 +174,7 @@ This in fact was also the case in one of the programs in question, as the code r
 
 We also noted a lack of domain-specific workflows for recomputation in non-CS journals.
 A counterexample is the Geoscientific Model Development (GMD) journal, which encourages reviewers to get
-  acquainted with the code behind papers under review \cite{GMD_editorial_2013}.
+  acquainted with the code behind papers under review~\cite{GMD_editorial_2013}.
 Yet, the same journal, as of now, imposes a 50~MB limit on the size of electronic supplements 
   which effectively rules out shipping a VM together with the paper.
 
