--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -636,6 +636,8 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
       author = "C. Titus  Brown",
       title = "Our approach to replication in computational science",
         howpublished = "\url{http://ivory.idyll.org/blog/replication-i.html}",
+        month = apr,
+        day = 2,
             year = 2012
 }
 
@@ -678,7 +680,7 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
 
 
 
-@article{Brown2012,
+@Misc{Brown2012,
       abstract = {Deep shotgun sequencing and analysis of genomes, transcriptomes, amplified single-cell genomes, and metagenomes has enabled investigation of a wide range of organisms and ecosystems. However, sampling variation in short-read data sets and high sequencing error rates of modern sequencers present many new computational challenges in data interpretation. These challenges have led to the development of new classes of mapping tools and \{$\backslash$em de novo\} assemblers. These algorithms are challenged by the continued improvement in sequencing throughput. We here describe digital normalization, a single-pass computational algorithm that systematizes coverage in shotgun sequencing data sets, thereby decreasing sampling variation, discarding redundant data, and removing the majority of errors. Digital normalization substantially reduces the size of shotgun data sets and decreases the memory and time requirements for \{$\backslash$em de novo\} sequence assembly, all without significantly impacting content of the generated contigs. We apply digital normalization to the assembly of microbial genomic data, amplified single-cell genomic data, and transcriptomic data. Our implementation is freely available for use and modification.},
         added-at = {2012-11-08T12:19:32.000+0100},
           author = {Brown, C Titus and Howe, Adina and Zhang, Qingpeng and Pyrkosz, Alexis B and Brom, Timothy H},
@@ -690,7 +692,7 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
                       keywords = {normalization rna-seq},
                         timestamp = {2012-11-08T12:19:32.000+0100},
                           title = {{A Reference-Free Algorithm for Computational Normalization of Shotgun Sequencing Data}},
-                            url = {http://arxiv.org/abs/1203.4802},
+                            arxiv = {1203.4802},
                               username = {jabreftest},
                                 year = 2012
 }
