add another ref

--- a/SummerSchoolPaper/group3.tex
+++ b/SummerSchoolPaper/group3.tex
@@ -148,7 +148,7 @@ While the software has already been released under the open-source GPL license
   a potential legal issue.
 The library features the implementation of an algorithm inspired by a technique 
   described in the scientific literature but also covered by several patents,
-  including a European one (EP1847939A2). This prevents us from using the
+  including a European one~\cite{shima2007simulation}. This prevents us from using the
   existing implementation.
 
 Furthermore, the crux of the implementation is its support for execution
@@ -167,7 +167,7 @@ We encountered legal obstacles with all papers.
 All of the software had been developed at universities, which typically results in the copyright being held by these institutions.
 Furthermore, the decisions of whether to allow open-source distribution of the
 code and the choice of licensing terms might be the prerogative of a university
-representative (e.g.\ a PhD supervisor).
+representative (e.g., a PhD supervisor).
 While this is in no way unique to non-CS domains, it is likely that pre-existing IP procedures are less likely to cover software dissemination aspects in institutions not dealing with computer science.
 Even if the legal status of the code developed for a given experiment is settled and matches reproducibility requirements, the environment needed to run it might prevent unconstrained recomputation.
 This in fact was also the case in one of the programs in question, as the code relied on a proprietary software library.
