--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -767,3 +767,13 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
     year = 2013,
     url = {http://documents.manchester.ac.uk/display.aspx?DocID=487}
 }
+
+@misc{shima2007simulation,
+  title={Simulation method, simulation program, and simulator},
+  author={Shima, S. and Sugiyama, T. and Kusano, K. and Kawano, A. and Hirose, S.},
+  url={https://register.epo.org/application?number=EP07008132},
+  year = 2007,
+  month = oct,
+  day = 24,
+  note={European Patent EP1847939},
+}
