tidy bibtex keys

--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -1,7 +1,8 @@
 @Misc{summerschoolpaper,
     year = 2014,
     url = "https://github.com/larskotthoff/recomputation-ss-paper/",
-    title = "GitHub repository for Recomputation Summer School Paper"}
+    key = {GitHub},
+    title = "{GitHub} repository for Recomputation Summer School Paper"}
 
 @Misc{executablepaper,
     year = 2011,
@@ -40,6 +41,7 @@
 @Misc{azure,
 	howpublished = {\url{https://azure.microsoft.com/en-us/}},
 	Title = {{Microsoft Azure}},
+	key = {{Microsoft Azure}},
     note = {Accessed 31 August 2014},
 }
 
@@ -727,24 +729,28 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
 
 @Misc{mozillasciencelabs,
     title = {{Mozilla Science Labs}},
+    key = {{Mozilla Science Labs}},
     howpublished = {\url{http://mozillascience.org/}},
     note = {Accessed 31 August 2014},
 }
 
 @Misc{openscienceframework,
     title = {{Open Science Framework}},
+    key = {{Open Science Framework}},
     howpublished = {\url{https://osf.io/}},
     note = {Accessed 31 August 2014},
 }
 
 @Misc{runmycode,
     title = {{RunMyCode}},
+    key = {{RunMyCode}},
     howpublished = {\url{http://www.runmycode.org/}},
     note = {Accessed 31 August 2014},
 }
 
 @Misc{softwarecarpentry,
     title = {{Software Carpentry}},
+    key = {{Software Carpentry}},
     howpublished = {\url{http://software-carpentry.org/}},
     note = {Accessed 31 August 2014},
 }
