add missing DOIs

--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -387,7 +387,8 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
               pages     = {1099-1108},
                 ee        = {http://doi.acm.org/10.1145/2470654.2466142},
                   crossref  = {DBLP:conf/chi/2013},
-                    bibsource = {DBLP, http://dblp.uni-trier.de}
+                    bibsource = {DBLP, http://dblp.uni-trier.de},
+                    doi = {10.1145/2470654.2466142},
 }
 @proceedings{DBLP:conf/chi/2013,
       editor    = {Wendy E. Mackay and
@@ -422,7 +423,9 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
                 editor = {Wolfgang H{\"a}rdle and Bernd R{\"o}nz},
                   publisher = {Physica Verlag, Heidelberg},
                     note = {ISBN 3-7908-1517-9},
-                      url = {http://www.stat.uni-muenchen.de/~leisch/Sweave}
+                      url =
+                      {http://www.stat.uni-muenchen.de/~leisch/Sweave},
+                      doi = {10.1007/978-3-642-57489-4_89},
 }
 
 @article{Merali_2010,
