--- a/SummerSchoolPaper/open.tex
+++ b/SummerSchoolPaper/open.tex
@@ -7,12 +7,12 @@ We discuss here what we mean by these words, how we tried to achieve them, and t
 
 By ``open'', we mean that the paper was openly developed and written.  The paper was first sketched out in the week of the summer school, and then 
 developed further over the following three weeks.  The authors collaborated via GitHub: this is not unusual but distributed source code control was  particularly important with so may authors working in parallel over a short period of time.
-Because we used a public github repository~\cite{summerschoolpaper}, 
+Because we used a public GitHub repository~\cite{summerschoolpaper}, 
 the
 development of the paper can be tracked throughout through the commit history on
 GitHub.  
 Anybody can download not only the final paper, but its source, and code and other materials collected during its development.  
-An interesting aside, relevant to cases where statements of contribution are required, is that anybody can see what each author committed on the paper or supporting materials throughout its life.  However, it must be borne in mind that a commit by one person may represent the work of several authors working together offline.  
+An interesting aside, relevant to cases where statements of contribution are required, is that anybody can see what each author committed on the paper or supporting materials throughout its life.  It must be borne in mind, however, that a commit by one person may represent the work of several authors working together offline.  
 
 By ``executable'', we mean that the paper that can be reconstructed from source 
 materials, and that data can be reanalysed as it changes and new versions of the paper produced, and possibly executable code rerun.   The name has been used, for example, by the ``Executable Papers Grand Challenge''~\cite{executablepaper}.
@@ -31,7 +31,7 @@ available to future researchers.
 In some cases this has also been done in git,
 with materials such as ethics forms and experimental results put into the repository.  
 In other cases we have constructed VMs to recompute experiments.  
-We also built a machine which not only contains a clone of the github repository, but all the necessary software and packages such as R, \LaTeX to build the paper.
+We also built a machine which not only contains a clone of the github repository, but all the necessary software and packages, such as R and \LaTeX, to build the paper.
 As well as reproducibility, this helped us during the writing of the paper.  At times some authors would be unable to build the whole paper, perhaps because of slight differences in version numbers of R or its packages from other authors.  The availability of the VM in which the paper could build was invaluable, since if it built there, we were safe.  This also highlights the value of the paper VM, since if not all authors could build the paper during its preparation because of package inconsistencies, it is very likely that future workers would not be able to build it from the github repository without some work.
 Even a small VM 
 might be half a gigabyte, and such large files can be problematic for git.
