--- a/SummerSchoolPaper/open.tex
+++ b/SummerSchoolPaper/open.tex
@@ -31,8 +31,8 @@ available to future researchers.
 In some cases this has also been done in git,
 with materials such as ethics forms and experimental results put into the repository.  
 In other cases we have constructed VMs to recompute experiments.  
-We also built a machine which not only contains a clone of the github repository, but all the necessary software and packages, such as R and \LaTeX, to build the paper.
-As well as reproducibility, this helped us during the writing of the paper.  At times some authors would be unable to build the whole paper, perhaps because of slight differences in version numbers of R or its packages from other authors.  The availability of the VM in which the paper could build was invaluable, since if it built there, we were safe.  This also highlights the value of the paper VM, since if not all authors could build the paper during its preparation because of package inconsistencies, it is very likely that future workers would not be able to build it from the github repository without some work.
+We also built a machine which not only contains a clone of the GitHub repository, but all the necessary software and packages, such as R and \LaTeX, to build the paper.
+As well as reproducibility, this helped us during the writing of the paper.  At times some authors would be unable to build the whole paper, perhaps because of slight differences in version numbers of R or its packages from other authors.  The availability of the VM in which the paper could build was invaluable, since if it built there, we were safe.  This also highlights the value of the paper VM, since if not all authors could build the paper during its preparation because of package inconsistencies, it is very likely that future workers would not be able to build it from the GitHub repository without some work.
 Even a small VM 
 might be half a gigabyte, and such large files can be problematic for git.
 These are therefore stored elsewhere.  
@@ -44,7 +44,7 @@ Our success is mixed.  We cannot be completely open because
 some of the data and/or programs used in various parts of our paper do not allow us to share them.  This is particularly true of the third case study, and as a result we cannot distribute the VM embodying those experiments. Also our paper is not fully executable since 
 many computations involved in constructing the data must be run by hand.  Also some of the tables in this paper are static, with data entered manually rather than reanalysed by Sweave. This contrasts negatively with Brown's executable paper~\cite{brown}.  
 In terms of reproducibility, we feel we have been mostly successful.  
-Provision of materials via github will be helpful for those who wish to adapt or reproduce our work.
+Provision of materials via GitHub will be helpful for those who wish to adapt or reproduce our work.
 We have provided VMs where possible and appropriate, and can distribute two of them: this should enable the recomputation of our paper.  
 While we might pat ourselves on the back for this, we feel it is better to be cautious. We ourselves have discussed potential issues, such as ethical and legal, and unforeseen technical issues might prevent reproducibility. The real test of reproducibility must be time.
 It is interesting to speculate: for example, if we run a second summer school in 2015, we might ask participants to reproduce this paper and see how we did this year!
