add reference to spss to R package

--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -786,3 +786,9 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
   day = 24,
   note={European Patent EP1847939},
 }
+
+@Manual{spsstor,
+   title = {SPSStoR: SPSS syntax to R syntax},
+   author = {Brandon LeBeau},
+   note = {R package version 0.1},
+ }
